<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/shape_dialog">

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@drawable/selector_btn"
        android:text="@string/exit_btn_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stayBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stayBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@drawable/selector_btn"
        android:text="@string/stay_btn_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/exitBtn" />

    <TextView
        android:id="@+id/exitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_text_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintBottom_toTopOf="@id/exitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>